--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,7 @@ beautifulsoup4
 dnspython
 ffmpeg-python
 future==0.18.3
-
-# FIXED httpx version (required by gpytranslate + youtube-search-python)
-httpx[http2]==0.28.1
-
+httpx[http2]
 search_engine_parser
 telethon==1.33.1
 gitpython
@@ -26,14 +23,9 @@ requests
 qrcode
 SafoneAPI==1.0.65
 tgcrypto
-
-# FIXED gpytranslate (compatible with httpx 0.28.x)
 gpytranslate==2.0.0
-
 MukeshAPI
 googlesearch-python
-
-# FIXED youtube-search-python (latest stable supporting new httpx)
 youtube-search-python
 
 spotipy
